HomeTab Views sorted.

--- a/StockViewer/Base.lproj/Main.storyboard
+++ b/StockViewer/Base.lproj/Main.storyboard
@@ -1,123 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="StockViewer" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1081" y="-174"/>
-        </scene>
-        <!--My Stocks-->
-        <scene sceneID="UJN-YE-tto">
-            <objects>
-                <viewController id="wSo-4Y-0xF" customClass="MyStocksViewController" customModule="StockViewer" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="nEj-rB-vHx">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="rqq-cg-QBO">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="jSU-VX-OfW"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="rqq-cg-QBO" firstAttribute="trailing" secondItem="jSU-VX-OfW" secondAttribute="trailing" id="1WM-q3-1Wa"/>
-                            <constraint firstItem="rqq-cg-QBO" firstAttribute="top" secondItem="nEj-rB-vHx" secondAttribute="top" id="1jd-RM-H77"/>
-                            <constraint firstItem="rqq-cg-QBO" firstAttribute="bottom" secondItem="jSU-VX-OfW" secondAttribute="bottom" id="KqJ-9A-31z"/>
-                            <constraint firstItem="rqq-cg-QBO" firstAttribute="leading" secondItem="jSU-VX-OfW" secondAttribute="leading" id="zjV-59-vVP"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="My Stocks" selectedImage="heart" catalog="system" id="Bbh-Mv-8BL"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Wzk-kH-5mm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="859" y="165"/>
-        </scene>
-        <!--Stocks List-->
-        <scene sceneID="nNc-8u-QyN">
-            <objects>
-                <viewController id="RAh-If-O5c" customClass="HomeViewController" customModule="StockViewer" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="AiB-Ui-wfi">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="4Rh-WI-N2a">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="Atc-ad-ehi"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="4Rh-WI-N2a" firstAttribute="leading" secondItem="Atc-ad-ehi" secondAttribute="leading" id="IZ5-bh-PiO"/>
-                            <constraint firstItem="4Rh-WI-N2a" firstAttribute="bottom" secondItem="Atc-ad-ehi" secondAttribute="bottom" id="RC9-EK-bOd"/>
-                            <constraint firstItem="4Rh-WI-N2a" firstAttribute="trailing" secondItem="Atc-ad-ehi" secondAttribute="trailing" id="xuw-0I-B0t"/>
-                            <constraint firstItem="4Rh-WI-N2a" firstAttribute="top" secondItem="AiB-Ui-wfi" secondAttribute="top" id="yH8-i1-rFl"/>
-                        </constraints>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Stocks List" selectedImage="list.dash" catalog="system" id="7Eh-Gf-RPr"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Aav-NS-miv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="888.40579710144937" y="-478.125"/>
-        </scene>
-        <!--Stock Details View Controller-->
-        <scene sceneID="MBw-Rb-4Wp">
-            <objects>
-                <viewController id="0ui-RP-kFN" customClass="StockDetailsViewController" customModule="StockViewer" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="tPN-Cc-ig5">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="4q4-kB-1RO"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VQb-Hs-5kL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1700" y="-478"/>
-        </scene>
-        <!--Tabbar View Controller-->
-        <scene sceneID="CF6-zv-8zG">
-            <objects>
-                <tabBarController id="QGx-fw-kOx" customClass="TabbarViewController" customModule="StockViewer" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ch9-hL-dP0">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="RAh-If-O5c" kind="relationship" relationship="viewControllers" id="U0e-3p-pm9"/>
-                        <segue destination="wSo-4Y-0xF" kind="relationship" relationship="viewControllers" id="XV2-lV-dhF"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="536-5S-IHY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="0.0" y="-174"/>
-        </scene>
-    </scenes>
-    <resources>
-        <image name="heart" catalog="system" width="128" height="109"/>
-        <image name="list.dash" catalog="system" width="128" height="85"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
+    <scenes/>
 </document>
